@@ -1,6 +1,7 @@
 package com.cmclinnovations.agent.model;
 
 import java.util.ArrayDeque;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Queue;
@@ -12,21 +13,21 @@ import com.fasterxml.jackson.databind.node.ObjectNode;
 public record QueryTemplateFactoryParameters(
     Queue<Queue<SparqlBinding>> bindings,
     ObjectNode rootNode,
-    Queue<String> targetIds,
+    Queue<List<String>> targetIds,
     ParentField parent,
     Map<String, String> criterias,
     String addQueryStatements,
     Map<Variable, List<Integer>> addVars) {
 
   public QueryTemplateFactoryParameters(ObjectNode rootNode, String targetId) {
-    this(null, rootNode, new ArrayDeque<>(List.of(targetId)), null, null, null, null);
+    this(null, rootNode, new ArrayDeque<>(List.of(Arrays.asList(targetId))), null, null, null, null);
   }
 
   public QueryTemplateFactoryParameters(Queue<Queue<SparqlBinding>> bindings, Map<String, String> criterias) {
     this(bindings, null, new ArrayDeque<>(), null, criterias, null, null);
   }
 
-  public QueryTemplateFactoryParameters(Queue<Queue<SparqlBinding>> bindings, Queue<String> targetIds,
+  public QueryTemplateFactoryParameters(Queue<Queue<SparqlBinding>> bindings, Queue<List<String>> targetIds,
       ParentField parent, String addQueryStatements, Map<Variable, List<Integer>> addVars) {
     this(bindings, null, targetIds, parent, null, addQueryStatements, addVars);
   }
