@@ -5,6 +5,7 @@ import static org.mockito.Mockito.when;
 
 import java.io.IOException;
 import java.util.ArrayDeque;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -93,7 +94,7 @@ class QueryTemplateServiceTest {
     void testGenGetQuery_WithFilter() throws IOException {
         Queue<Queue<SparqlBinding>> testBindings = GetQueryTemplateFactoryTest.initTestBindings();
         String results = testService.genGetQuery(testBindings,
-                new ArrayDeque<>(List.of(GetQueryTemplateFactoryTest.SAMPLE_FILTER)), null,
+                new ArrayDeque<>(List.of(Arrays.asList(GetQueryTemplateFactoryTest.SAMPLE_FILTER))), null,
                 "", new HashMap<>());
         TestUtils.validateGeneratedQueryOutput(GetQueryTemplateFactoryTest.EXPECTED_SIMPLE_ID_FILE, results);
     }
